--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,5 +10,9 @@ spring:
       classic_compatible: true
       datetime_format: yyyy-MM-dd HH:mm
       number_format: 0.##
+  redis:
+    host: localhost
+    port: 6379
+    password:
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
