--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,5 +14,10 @@ spring:
     host: localhost
     port: 6379
     password:
+
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
+
+file:
+  upload:
+    dir: ${user.dir}/upload
