--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,17 @@ spring:
     host: localhost
     port: 6379
     password:
+  data:
+    elasticsearch:
+      cluster-name: daichi
+      cluster-nodes: 127.0.0.1:9300
+      repositories:
+        enabled: true
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
